# physiobot

./: .gitignore  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt
feedback/: rules.py  session.py
pose/: estimator.py  features.py
tests/: test_features.py  test_rules.py  test_session.py
ui/: config.py  overlay.py
